Fixed issue with parsing position args within gcode_position_parser.  Added a 'no camera selected' image within the octolapse tab.  replaced mix-blend-mode with text-shadow to increase visibility of the 'disabled' snapshot thumbnail indicator.

--- a/octoprint_octolapse/static/css/octolapse.css
+++ b/octoprint_octolapse/static/css/octolapse.css
@@ -42,7 +42,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
-    mix-blend-mode: difference;
+    text-shadow: 0px 0px 2px #000000;
     font-size:22px;
 }
 .octolapse .label-important, .octolapse .badge-important {
